<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World </string>
    <string name="ButtonText">Click Here!</string>
    <string name="topItem">Look at my GUI:</string>
    <string name="checkBox">Check this out!</string>
    <string name="switchBox">Switch on/off</string>
    <string name="editTxt">Type here</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="type_email_hint">Type email here</string>
    <string name="type_your_password">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="type_email">Type email here</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_name">Your name</string>
    <string name="your_profile">Your profile</string>
    <string name="click_the_button_above_to_take_a_picture">Click the button above to take a picture</string>

</resources>