<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topItem"
        android:textSize="30dp"
        android:id="@+id/button43"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/ButtonText"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/button43"


            />

        <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
            android:layout_alignParentRight="true"
            android:layout_below="@id/button43"

            />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-87dp"
        app:srcCompat="@drawable/flag"
        android:layout_below="@id/checkBox4"

        />

    <Switch
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switchBox"
            android:textOff="OFF"
            android:textOn="ON"
            android:layout_alignParentRight="true"
        android:layout_below="@id/checkBox4"

            />


    <EditText
        android:id="@+id/plain_text_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/editTxt"
        android:inputType="textPersonName"
        android:layout_alignParentRight="true"
        android:layout_below="@id/imageButton"

        />

</RelativeLayout>