<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topItem"
        android:textSize="30dp"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button3"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/ButtonText"
            android:layout_weight="1"
            android:layout_gravity="fill"
        />

        <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/flag"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switchBox"
            android:textOff="OFF"
            android:textOn="ON"
            android:layout_weight="1"
            android:layout_gravity="fill"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/plain_text_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/editTxt"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:layout_gravity="fill"
        />

</LinearLayout>